--- a/index.html
+++ b/index.html
@@ -4,94 +4,111 @@
     <meta charset="UTF-8" />
     <title>Three.js Assignment 5</title>
     <script type="importmap">
-    {
-      "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js",
-        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/"
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/"
+        }
       }
-    }
     </script>
   </head>
   <body>
     <canvas id="three-canvas"></canvas>
     <script type="module">
-  import * as THREE from 'three';
+      import * as THREE from 'three';
 
-  const scene = new THREE.Scene();
-  scene.background = new THREE.Color(0xeeeeee);
+      const scene = new THREE.Scene();
+      scene.background = new THREE.Color(0xeeeeee);
 
-  const camera = new THREE.PerspectiveCamera(
-    75,
-    window.innerWidth / window.innerHeight,
-    0.1,
-    1000
-  );
-  camera.position.z = 20;
+      const camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
+      camera.position.z = 20 
+      const renderer = new THREE.WebGLRenderer({
+        canvas: document.getElementById('three-canvas'),
+        antialias: true
+      });
+      renderer.setSize(window.innerWidth, window.innerHeight);
 
-  const renderer = new THREE.WebGLRenderer({
-    canvas: document.getElementById('three-canvas'),
-    antialias: true
-  });
-  renderer.setSize(window.innerWidth, window.innerHeight);
+      // Add lights
+      const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+      scene.add(ambientLight);
 
-  // Add lights
-  const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
-  scene.add(ambientLight);
+      const pointLight = new THREE.PointLight(0xffffff, 1);
+      pointLight.position.set(10, 10, 10);
+      scene.add(pointLight);
 
-  const pointLight = new THREE.PointLight(0xffffff, 1);
-  pointLight.position.set(10, 10, 10);
-  scene.add(pointLight);
+      const shapes = [];
 
-  const shapes = [];
+      const geometries = [
+        new THREE.BoxGeometry(),
+        new THREE.SphereGeometry(0.5, 32, 32),
+        new THREE.CylinderGeometry(0.5, 0.5, 1, 32),
+        new THREE.ConeGeometry(0.5, 1, 32),
+        new THREE.TorusGeometry(0.4, 0.15, 16, 100)
+      ];
 
-  const geometries = [
-    new THREE.BoxGeometry(),
-    new THREE.SphereGeometry(0.5, 32, 32),
-    new THREE.CylinderGeometry(0.5, 0.5, 1, 32),
-    new THREE.ConeGeometry(0.5, 1, 32),
-    new THREE.TorusGeometry(0.4, 0.15, 16, 100)
-  ];
+      // Standard material for most shapes
+      const standardMaterial = new THREE.MeshStandardMaterial({
+        color: 0x0077ff,
+        metalness: 0.3,
+        roughness: 0.4
+      });
 
-  const material = new THREE.MeshStandardMaterial({ color: 0x0077ff, metalness: 0.3, roughness: 0.4 });
+      // Texture loader
+      const textureLoader = new THREE.TextureLoader();
+      const texture = textureLoader.load(
+        'https://threejs.org/examples/textures/uv_grid_opengl.jpg' // Example texture
+      );
 
-  for (let i = 0; i < 20; i++) {
-    const geometry = geometries[i % geometries.length];
-    const mesh = new THREE.Mesh(geometry, material);
+      // Textured material for one shape
+      const texturedMaterial = new THREE.MeshStandardMaterial({
+        map: texture,
+        metalness: 0.3,
+        roughness: 0.4
+      });
 
-    // Random position
-    mesh.position.set(
-      (Math.random() - 0.5) * 30,
-      (Math.random() - 0.5) * 30,
-      (Math.random() - 0.5) * 30
-    );
+      for (let i = 0; i < 20; i++) {
+        const geometry = geometries[i % geometries.length];
+        // Apply textured material to the first shape, standard material to others
+        const material = i === 0 ? texturedMaterial : standardMaterial;
+        const mesh = new THREE.Mesh(geometry, material);
 
-    // Random rotation
-    mesh.rotation.set(
-      Math.random() * Math.PI,
-      Math.random() * Math.PI,
-      Math.random() * Math.PI
-    );
+        // Random position
+        mesh.position.set(
+          (Math.random() - 0.5) * 30,
+          (Math.random() - 0.5) * 30,
+          (Math.random() - 0.5) * 30
+        );
 
-    // Random scale
-    const scale = 0.5 + Math.random() * 1.5;
-    mesh.scale.set(scale, scale, scale);
+        // Random rotation
+        mesh.rotation.set(
+          Math.random() * Math.PI,
+          Math.random() * Math.PI,
+          Math.random() * Math.PI
+        );
 
-    scene.add(mesh);
-    shapes.push(mesh);
-  }
+        // Random scale
+        const scale = 0.5 + Math.random() * 1.5;
+        mesh.scale.set(scale, scale, scale);
 
-  function animate() {
-    requestAnimationFrame(animate);
-    shapes.forEach(shape => {
-      shape.rotation.x += 0.005;
-      shape.rotation.y += 0.01;
-    });
-    renderer.render(scene, camera);
-  }
+        scene.add(mesh);
+        shapes.push(mesh);
+      }
 
-  animate();
-</script>
+      function animate() {
+        requestAnimationFrame(animate);
+        shapes.forEach(shape => {
+          shape.rotation.x += 0.005;
+          shape.rotation.y += 0.01;
+        });
+        renderer.render(scene, camera);
+      }
 
-
+      animate();
+    </script>
   </body>
 </html>
