--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
         }
       }
     </script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      canvas {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <canvas id="three-canvas"></canvas>
     <script type="module">
       import * as THREE from 'three';
+      import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
       const scene = new THREE.Scene();
       scene.background = new THREE.Color(0xeeeeee);
@@ -26,14 +36,14 @@
         0.1,
         1000
       );
-      camera.position.z = 20 
+      camera.position.z = 30; // Move camera farther back
+
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById('three-canvas'),
         antialias: true
       });
       renderer.setSize(window.innerWidth, window.innerHeight);
 
-      // Add lights
       const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
       scene.add(ambientLight);
 
@@ -51,38 +61,37 @@
         new THREE.TorusGeometry(0.4, 0.15, 16, 100)
       ];
 
-      // Standard material for most shapes
+      // Texture for one shape
+      const textureLoader = new THREE.TextureLoader();
+      const texture = textureLoader.load(
+        'https://threejs.org/examples/textures/uv_grid_opengl.jpg'
+      );
+
       const standardMaterial = new THREE.MeshStandardMaterial({
         color: 0x0077ff,
         metalness: 0.3,
         roughness: 0.4
       });
 
-      // Texture loader
-      const textureLoader = new THREE.TextureLoader();
-      const texture = textureLoader.load(
-        'https://threejs.org/examples/textures/uv_grid_opengl.jpg' // Example texture
-      );
-
-      // Textured material for one shape
       const texturedMaterial = new THREE.MeshStandardMaterial({
         map: texture,
         metalness: 0.3,
         roughness: 0.4
       });
 
+      // Add 20 random shapes, avoiding center
       for (let i = 0; i < 20; i++) {
         const geometry = geometries[i % geometries.length];
-        // Apply textured material to the first shape, standard material to others
         const material = i === 0 ? texturedMaterial : standardMaterial;
         const mesh = new THREE.Mesh(geometry, material);
 
-        // Random position
-        mesh.position.set(
-          (Math.random() - 0.5) * 30,
-          (Math.random() - 0.5) * 30,
-          (Math.random() - 0.5) * 30
-        );
+        let x = (Math.random() - 0.5) * 30;
+        let y = (Math.random() - 0.5) * 30;
+        let z = (Math.random() - 0.5) * 30;
+        if (Math.abs(x) < 5) x += x < 0 ? -5 : 5;
+        if (Math.abs(y) < 5) y += y < 0 ? -5 : 5;
+        if (Math.abs(z) < 5) z += z < 0 ? -5 : 5;
+        mesh.position.set(x, y, z);
 
         // Random rotation
         mesh.rotation.set(
@@ -91,13 +100,34 @@
           Math.random() * Math.PI
         );
 
-        // Random scale
         const scale = 0.5 + Math.random() * 1.5;
         mesh.scale.set(scale, scale, scale);
 
         scene.add(mesh);
         shapes.push(mesh);
       }
+
+      // Load a textured GLTF model (helmet)
+      const gltfLoader = new GLTFLoader();
+      gltfLoader.load(
+        'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
+        (gltf) => {
+          const model = gltf.scene;
+          model.position.set(0, -2, 0);    // Centered and lowered slightly
+          model.scale.set(10, 10, 10);     // Make helmet large and visible
+          scene.add(model);
+
+          function rotateModel() {
+            requestAnimationFrame(rotateModel);
+            model.rotation.y += 0.005;
+          }
+          rotateModel();
+        },
+        undefined,
+        (error) => {
+          console.error('Error loading glTF model:', error);
+        }
+      );
 
       function animate() {
         requestAnimationFrame(animate);
@@ -109,6 +139,12 @@
       }
 
       animate();
+
+      window.addEventListener('resize', () => {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      });
     </script>
   </body>
 </html>
