--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="module">
       import * as THREE from 'three';
       import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+      import { generateShapes } from './generateShapes.js';
 
       const scene = new THREE.Scene();
       scene.background = new THREE.Color(0xeeeeee);
@@ -36,7 +37,7 @@
         0.1,
         1000
       );
-      camera.position.z = 30; // Move camera farther back
+      camera.position.z = 30;
 
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById('three-canvas'),
@@ -51,8 +52,6 @@
       pointLight.position.set(10, 10, 10);
       scene.add(pointLight);
 
-      const shapes = [];
-
       const geometries = [
         new THREE.BoxGeometry(),
         new THREE.SphereGeometry(0.5, 32, 32),
@@ -61,10 +60,9 @@
         new THREE.TorusGeometry(0.4, 0.15, 16, 100)
       ];
 
-      // Texture for one shape
       const textureLoader = new THREE.TextureLoader();
       const texture = textureLoader.load(
-        'https://threejs.org/examples/textures/uv_grid_opengl.jpg'
+        'textures/uv_grid_opengl.png'
       );
 
       const standardMaterial = new THREE.MeshStandardMaterial({
@@ -79,33 +77,7 @@
         roughness: 0.4
       });
 
-      // Add 20 random shapes, avoiding center
-      for (let i = 0; i < 20; i++) {
-        const geometry = geometries[i % geometries.length];
-        const material = i === 0 ? texturedMaterial : standardMaterial;
-        const mesh = new THREE.Mesh(geometry, material);
-
-        let x = (Math.random() - 0.5) * 30;
-        let y = (Math.random() - 0.5) * 30;
-        let z = (Math.random() - 0.5) * 30;
-        if (Math.abs(x) < 5) x += x < 0 ? -5 : 5;
-        if (Math.abs(y) < 5) y += y < 0 ? -5 : 5;
-        if (Math.abs(z) < 5) z += z < 0 ? -5 : 5;
-        mesh.position.set(x, y, z);
-
-        // Random rotation
-        mesh.rotation.set(
-          Math.random() * Math.PI,
-          Math.random() * Math.PI,
-          Math.random() * Math.PI
-        );
-
-        const scale = 0.5 + Math.random() * 1.5;
-        mesh.scale.set(scale, scale, scale);
-
-        scene.add(mesh);
-        shapes.push(mesh);
-      }
+      const shapes = generateShapes(scene, geometries, texturedMaterial, standardMaterial);
 
       // Load a textured GLTF model (helmet)
       const gltfLoader = new GLTFLoader();
@@ -113,8 +85,8 @@
         'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
         (gltf) => {
           const model = gltf.scene;
-          model.position.set(0, -2, 0);    // Centered and lowered slightly
-          model.scale.set(10, 10, 10);     // Make helmet large and visible
+          model.position.set(0, -2, 0);
+          model.scale.set(10, 10, 10);
           scene.add(model);
 
           function rotateModel() {
