--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         0.1,
         1000
       );
-      camera.position.z = 30;
+      camera.position.set(0, 5, 20); // Adjusted camera position for better view
 
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById('three-canvas'),
@@ -45,19 +45,23 @@
       });
       renderer.setSize(window.innerWidth, window.innerHeight);
 
-      // ✅ Light 1: Ambient Light
-      const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
+      // ✅ Light 1: Ambient Light (increased intensity)
+      const ambientLight = new THREE.AmbientLight(0xffffff, 0.8); // Increased to 0.8
       scene.add(ambientLight);
 
-      // ✅ Light 2: Point Light
-      const pointLight = new THREE.PointLight(0xffffff, 1);
-      pointLight.position.set(10, 10, 10);
+      // ✅ Light 2: Point Light (increased intensity and added decay/distance)
+      const pointLight = new THREE.PointLight(0xffffff, 50, 100, 2); // Intensity 50, max distance 100
+      pointLight.position.set(5, 5, 5); // Moved closer to origin
       scene.add(pointLight);
 
-      // ✅ Light 3: Directional Light
-      const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
-      directionalLight.position.set(-10, 10, 5);
+      // ✅ Light 3: Directional Light (increased intensity)
+      const directionalLight = new THREE.DirectionalLight(0xffffff, 1.0); // Increased to 1.0
+      directionalLight.position.set(-5, 10, 5); // Adjusted position
       scene.add(directionalLight);
+
+      // Optional: Add a helper to visualize the point light position
+      const pointLightHelper = new THREE.PointLightHelper(pointLight, 0.5);
+      scene.add(pointLightHelper);
 
       // Geometries
       const geometries = [
@@ -70,18 +74,18 @@
 
       // Materials
       const textureLoader = new THREE.TextureLoader();
-      const texture = textureLoader.load('textures/uv_grid_opengl.png');
+      const texture = textureLoader.load('https://threejs.org/examples/textures/uv_grid_opengl.jpg'); // Use .jpg as per Three.js examples
 
       const standardMaterial = new THREE.MeshStandardMaterial({
         color: 0x0077ff,
-        metalness: 0.3,
-        roughness: 0.4
+        metalness: 0.5, // Increased for more reflectivity
+        roughness: 0.3 // Slightly smoother for better highlights
       });
 
       const texturedMaterial = new THREE.MeshStandardMaterial({
         map: texture,
-        metalness: 0.3,
-        roughness: 0.4
+        metalness: 0.5,
+        roughness: 0.3
       });
 
       // Generate 20 shapes
@@ -93,8 +97,8 @@
         'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
         (gltf) => {
           const model = gltf.scene;
-          model.position.set(0, -2, 0);
-          model.scale.set(10, 10, 10);
+          model.position.set(0, 0, 0); // Centered the model
+          model.scale.set(5, 5, 5); // Reduced scale for better scene balance
           scene.add(model);
 
           // Rotate model continuously
