--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       const texture = textureLoader.load('https://threejs.org/examples/textures/uv_grid_opengl.jpg');
 
       const standardMaterial = new THREE.MeshStandardMaterial({
-        color: 0x0077ff,
+        color: 0xff0000,
         metalness: 0.5,
         roughness: 0.3
       });
