--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="module">
       import * as THREE from 'three';
       import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+      import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
       import { generateShapes } from './generateShapes.js';
 
       // Scene
@@ -58,6 +59,15 @@
         antialias: true
       });
       renderer.setSize(window.innerWidth, window.innerHeight);
+
+      // OrbitControls
+      const controls = new OrbitControls(camera, renderer.domElement);
+      controls.enableDamping = true; // Smooth camera movement
+      controls.dampingFactor = 0.05;
+      controls.screenSpacePanning = false;
+      controls.minDistance = 5;
+      controls.maxDistance = 50;
+      controls.maxPolarAngle = Math.PI / 2; // Prevent camera from going below ground
 
       // Lights
       const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
@@ -132,6 +142,7 @@
           shape.rotation.x += 0.005;
           shape.rotation.y += 0.01;
         });
+        controls.update(); // Update controls for smooth interaction
         renderer.render(scene, camera);
       }
       animate();
