--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
   import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
   import { generateShapes } from './generateShapes.js';
+  import { handleMouseMove } from './hoverHandler.js';
 
   // Scene
   const scene = new THREE.Scene();
@@ -143,45 +144,17 @@
   const mouse = new THREE.Vector2();
   let currentlyHovered = null;
 
-  function onMouseMove(event) {
-    // Normalize mouse coordinates to [-1, 1]
-    mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-    mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+  function getCurrentlyHovered() {
+  return currentlyHovered;
+}
 
-    // Update raycaster
-    raycaster.setFromCamera(mouse, camera);
+function setCurrentlyHovered(value) {
+  currentlyHovered = value;
+}
 
-    // Check for intersections with shapes
-    const intersects = raycaster.intersectObjects(shapes);
-
-    // If hovering over a shape
-    if (intersects.length > 0) {
-      const intersectedMesh = intersects[0].object;
-      if (currentlyHovered !== intersectedMesh) {
-        // Revert previous hovered shape to original scale
-        if (currentlyHovered) {
-          const index = shapes.indexOf(currentlyHovered);
-          currentlyHovered.scale.copy(originalScales[index]);
-        }
-        // Scale up the new hovered shape
-        currentlyHovered = intersectedMesh;
-        const index = shapes.indexOf(currentlyHovered);
-        const originalScale = originalScales[index];
-        currentlyHovered.scale.set(
-          originalScale.x * 1.2,
-          originalScale.y * 1.2,
-          originalScale.z * 1.2
-        );
-      }
-    } else {
-      // If not hovering over any shape, revert scale of previously hovered
-      if (currentlyHovered) {
-        const index = shapes.indexOf(currentlyHovered);
-        currentlyHovered.scale.copy(originalScales[index]);
-        currentlyHovered = null;
-      }
-    }
-  }
+function onMouseMove(event) {
+  handleMouseMove(event, raycaster, mouse, camera, shapes, originalScales, setCurrentlyHovered, getCurrentlyHovered);
+}
 
   function onMouseClick(event) {
     // Normalize mouse coordinates to [-1, 1]
