--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
       import { generateShapes } from './generateShapes.js';
       import { handleMouseMove } from './hoverHandler.js';
+      import { checkCollisions } from './collisionHandler.js';
 
-      // Scene
       const scene = new THREE.Scene();
 
       // 🌌 Skybox
@@ -45,7 +45,6 @@
       ]);
       scene.background = skyboxTexture;
 
-      // Camera
       const camera = new THREE.PerspectiveCamera(
         75,
         window.innerWidth / window.innerHeight,
@@ -54,14 +53,12 @@
       );
       camera.position.set(0, 5, 20);
 
-      // Renderer
       const renderer = new THREE.WebGLRenderer({
         canvas: document.getElementById('three-canvas'),
         antialias: true
       });
       renderer.setSize(window.innerWidth, window.innerHeight);
 
-      // OrbitControls
       const controls = new OrbitControls(camera, renderer.domElement);
       controls.enableDamping = true;
       controls.dampingFactor = 0.05;
@@ -70,22 +67,18 @@
       controls.maxDistance = 50;
       controls.maxPolarAngle = Math.PI / 2;
 
-      // Lights
       const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
       scene.add(ambientLight);
 
       const pointLight = new THREE.PointLight(0xffffff, 50, 100, 2);
       pointLight.position.set(5, 5, 5);
       scene.add(pointLight);
+      scene.add(new THREE.PointLightHelper(pointLight, 0.5));
 
       const directionalLight = new THREE.DirectionalLight(0xffffff, 1.0);
       directionalLight.position.set(-5, 10, 5);
       scene.add(directionalLight);
 
-      const pointLightHelper = new THREE.PointLightHelper(pointLight, 0.5);
-      scene.add(pointLightHelper);
-
-      // Geometries
       const geometries = [
         new THREE.BoxGeometry(),
         new THREE.SphereGeometry(0.5, 32, 32),
@@ -94,7 +87,6 @@
         new THREE.TorusGeometry(0.4, 0.15, 16, 100)
       ];
 
-      // Materials
       const textureLoader = new THREE.TextureLoader();
       const texture = textureLoader.load('https://threejs.org/examples/textures/uv_grid_opengl.jpg');
 
@@ -110,45 +102,29 @@
         roughness: 0.3
       });
 
-      // Generate 20 shapes
       const shapes = generateShapes(scene, geometries, texturedMaterial, standardMaterial);
-
-      // Store original scales and rotation directions for each shape
       const originalScales = shapes.map(shape => shape.scale.clone());
-      const rotationDirections = shapes.map(() => ({
-        x: 0.005,
-        y: 0.01
-      }));
+      const rotationDirections = shapes.map(() => ({ x: 0.005, y: 0.01 }));
 
-      // === NEW: Moving Sphere for Collision ===
       const sphereGeometry = new THREE.SphereGeometry(0.5, 32, 32);
-      const sphereMaterial = new THREE.MeshStandardMaterial({
-        color: 0x00ff00,
-        metalness: 0.5,
-        roughness: 0.3
-      });
+      const sphereMaterial = new THREE.MeshStandardMaterial({ color: 0x00ff00, metalness: 0.5, roughness: 0.3 });
       const movingSphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
       movingSphere.position.set(0, 0, 0);
       scene.add(movingSphere);
 
-      // Sphere velocity
       const sphereVelocity = new THREE.Vector3(
         (Math.random() - 0.5) * 0.1,
         (Math.random() - 0.5) * 0.1,
         (Math.random() - 0.5) * 0.1
       );
+      const boundary = 15;
 
-      // Boundary limits for the sphere
-      const boundary = 15; // Matches the spread of shapes (±15)
-
-      // Track animations for scale pulsing
       const animations = shapes.map(() => ({
         isPulsing: false,
         pulseTime: 0,
-        pulseDuration: 0.5 // Duration of pulse in seconds
+        pulseDuration: 0.5
       }));
 
-      // Load GLTF Model
       const gltfLoader = new GLTFLoader();
       gltfLoader.load(
         'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
@@ -157,8 +133,6 @@
           model.position.set(0, 0, 0);
           model.scale.set(5, 5, 5);
           scene.add(model);
-
-          // Rotate model continuously
           function rotateModel() {
             requestAnimationFrame(rotateModel);
             model.rotation.y += 0.005;
@@ -171,7 +145,6 @@
         }
       );
 
-      // Raycaster for interactivity
       const raycaster = new THREE.Raycaster();
       const mouse = new THREE.Vector2();
       let currentlyHovered = null;
@@ -189,24 +162,15 @@
       }
 
       function onMouseClick(event) {
-        // Normalize mouse coordinates to [-1, 1]
         mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
         mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-
-        // Update raycaster
         raycaster.setFromCamera(mouse, camera);
-
-        // Check for intersections with shapes
         const intersects = raycaster.intersectObjects(shapes);
-
         if (intersects.length > 0) {
           const intersectedMesh = intersects[0].object;
-          // Skip the textured shape
           if (intersectedMesh.material !== texturedMaterial) {
-            // Create a new material with a random color
-            const randomColor = Math.random() * 0xffffff;
             intersectedMesh.material = new THREE.MeshStandardMaterial({
-              color: randomColor,
+              color: Math.random() * 0xffffff,
               metalness: 0.5,
               roughness: 0.3
             });
@@ -214,48 +178,11 @@
         }
       }
 
-      // Add event listeners
       window.addEventListener('mousemove', onMouseMove);
       window.addEventListener('click', onMouseClick);
 
-      // === NEW: Collision Detection and Animation ===
-      function checkCollisions() {
-        const sphereBox = new THREE.Box3().setFromObject(movingSphere);
-        shapes.forEach((shape, index) => {
-          const shapeBox = new THREE.Box3().setFromObject(shape);
-          if (sphereBox.intersectsBox(shapeBox) && !animations[index].isPulsing) {
-            // Skip textured shape (first shape)
-            if (shape.material !== texturedMaterial) {
-              // Change color
-              shape.material = new THREE.MeshStandardMaterial({
-                color: Math.random() * 0xffffff,
-                metalness: 0.5,
-                roughness: 0.3
-              });
-              // Reverse rotation direction
-              rotationDirections[index].x *= -1;
-              rotationDirections[index].y *= -1;
-              // Start pulse animation
-              animations[index].isPulsing = true;
-              animations[index].pulseTime = 0;
-            }
-            // Bounce the sphere
-            const normal = new THREE.Vector3();
-            const spherePos = movingSphere.position;
-            const shapePos = shape.position;
-            normal.subVectors(spherePos, shapePos).normalize();
-            const dot = sphereVelocity.dot(normal);
-            sphereVelocity.sub(normal.multiplyScalar(2 * dot));
-          }
-        });
-      }
-
-      // === NEW: Update Sphere Position and Handle Pulsing ===
       function updateSphereAndAnimations(delta) {
-        // Update sphere position
         movingSphere.position.addScaledVector(sphereVelocity, delta * 60);
-
-        // Boundary collision
         if (Math.abs(movingSphere.position.x) > boundary) {
           movingSphere.position.x = Math.sign(movingSphere.position.x) * boundary;
           sphereVelocity.x *= -1;
@@ -269,13 +196,12 @@
           sphereVelocity.z *= -1;
         }
 
-        // Update pulse animations
         shapes.forEach((shape, index) => {
           if (animations[index].isPulsing) {
             animations[index].pulseTime += delta;
             const t = animations[index].pulseTime / animations[index].pulseDuration;
             if (t < 1) {
-              const scaleFactor = 1 + 0.3 * Math.sin(t * Math.PI); // Pulse from 1x to 1.3x
+              const scaleFactor = 1 + 0.3 * Math.sin(t * Math.PI);
               shape.scale.copy(originalScales[index]).multiplyScalar(scaleFactor);
             } else {
               animations[index].isPulsing = false;
@@ -285,7 +211,6 @@
         });
       }
 
-      // Animate
       let lastTime = performance.now() / 1000;
       function animate() {
         requestAnimationFrame(animate);
@@ -293,22 +218,28 @@
         const delta = currentTime - lastTime;
         lastTime = currentTime;
 
-        // Update shapes rotation
         shapes.forEach((shape, index) => {
           shape.rotation.x += rotationDirections[index].x;
           shape.rotation.y += rotationDirections[index].y;
         });
 
-        // Update sphere and check collisions
         updateSphereAndAnimations(delta);
-        checkCollisions();
+
+        checkCollisions({
+          movingSphere,
+          shapes,
+          texturedMaterial,
+          animations,
+          rotationDirections,
+          sphereVelocity
+        });
 
         controls.update();
         renderer.render(scene, camera);
       }
+
       animate();
 
-      // Resize
       window.addEventListener('resize', () => {
         camera.aspect = window.innerWidth / window.innerHeight;
         camera.updateProjectionMatrix();
