--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
       import { generateShapes } from './generateShapes.js';
       import { handleMouseMove } from './hoverHandler.js';
       import { checkCollisions } from './collisionHandler.js';
+      import { updateSphereAndAnimations } from './animationHandler.js';
 
       const scene = new THREE.Scene();
 
-      // 🌌 Skybox
+      // Skybox
       const cubeTextureLoader = new THREE.CubeTextureLoader();
-      const skyboxTexture = cubeTextureLoader.load([
+      scene.background = cubeTextureLoader.load([
         'https://threejs.org/examples/textures/cube/Bridge2/posx.jpg',
         'https://threejs.org/examples/textures/cube/Bridge2/negx.jpg',
         'https://threejs.org/examples/textures/cube/Bridge2/posy.jpg',
@@ -43,14 +44,8 @@
         'https://threejs.org/examples/textures/cube/Bridge2/posz.jpg',
         'https://threejs.org/examples/textures/cube/Bridge2/negz.jpg'
       ]);
-      scene.background = skyboxTexture;
 
-      const camera = new THREE.PerspectiveCamera(
-        75,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-      );
+      const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
       camera.position.set(0, 5, 20);
 
       const renderer = new THREE.WebGLRenderer({
@@ -72,8 +67,7 @@
 
       const pointLight = new THREE.PointLight(0xffffff, 50, 100, 2);
       pointLight.position.set(5, 5, 5);
-      scene.add(pointLight);
-      scene.add(new THREE.PointLightHelper(pointLight, 0.5));
+      scene.add(pointLight, new THREE.PointLightHelper(pointLight, 0.5));
 
       const directionalLight = new THREE.DirectionalLight(0xffffff, 1.0);
       directionalLight.position.set(-5, 10, 5);
@@ -87,29 +81,18 @@
         new THREE.TorusGeometry(0.4, 0.15, 16, 100)
       ];
 
-      const textureLoader = new THREE.TextureLoader();
-      const texture = textureLoader.load('https://threejs.org/examples/textures/uv_grid_opengl.jpg');
-
-      const standardMaterial = new THREE.MeshStandardMaterial({
-        color: 0xff0000,
-        metalness: 0.5,
-        roughness: 0.3
-      });
-
-      const texturedMaterial = new THREE.MeshStandardMaterial({
-        map: texture,
-        metalness: 0.5,
-        roughness: 0.3
-      });
+      const texture = new THREE.TextureLoader().load('https://threejs.org/examples/textures/uv_grid_opengl.jpg');
+      const standardMaterial = new THREE.MeshStandardMaterial({ color: 0xff0000, metalness: 0.5, roughness: 0.3 });
+      const texturedMaterial = new THREE.MeshStandardMaterial({ map: texture, metalness: 0.5, roughness: 0.3 });
 
       const shapes = generateShapes(scene, geometries, texturedMaterial, standardMaterial);
       const originalScales = shapes.map(shape => shape.scale.clone());
       const rotationDirections = shapes.map(() => ({ x: 0.005, y: 0.01 }));
 
-      const sphereGeometry = new THREE.SphereGeometry(0.5, 32, 32);
-      const sphereMaterial = new THREE.MeshStandardMaterial({ color: 0x00ff00, metalness: 0.5, roughness: 0.3 });
-      const movingSphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
-      movingSphere.position.set(0, 0, 0);
+      const movingSphere = new THREE.Mesh(
+        new THREE.SphereGeometry(0.5, 32, 32),
+        new THREE.MeshStandardMaterial({ color: 0x00ff00, metalness: 0.5, roughness: 0.3 })
+      );
       scene.add(movingSphere);
 
       const sphereVelocity = new THREE.Vector3(
@@ -117,99 +100,49 @@
         (Math.random() - 0.5) * 0.1,
         (Math.random() - 0.5) * 0.1
       );
+
       const boundary = 15;
+      const animations = shapes.map(() => ({ isPulsing: false, pulseTime: 0, pulseDuration: 0.5 }));
 
-      const animations = shapes.map(() => ({
-        isPulsing: false,
-        pulseTime: 0,
-        pulseDuration: 0.5
-      }));
+      const raycaster = new THREE.Raycaster();
+      const mouse = new THREE.Vector2();
+      let currentlyHovered = null;
 
-      const gltfLoader = new GLTFLoader();
-      gltfLoader.load(
+      function getCurrentlyHovered() { return currentlyHovered; }
+      function setCurrentlyHovered(value) { currentlyHovered = value; }
+
+      window.addEventListener('mousemove', (e) =>
+        handleMouseMove(e, raycaster, mouse, camera, shapes, originalScales, setCurrentlyHovered, getCurrentlyHovered)
+      );
+
+      window.addEventListener('click', (event) => {
+        mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+        mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+        raycaster.setFromCamera(mouse, camera);
+        const intersects = raycaster.intersectObjects(shapes);
+        if (intersects.length > 0 && intersects[0].object.material !== texturedMaterial) {
+          intersects[0].object.material = new THREE.MeshStandardMaterial({
+            color: Math.random() * 0xffffff,
+            metalness: 0.5,
+            roughness: 0.3
+          });
+        }
+      });
+
+      new GLTFLoader().load(
         'https://threejs.org/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf',
         (gltf) => {
           const model = gltf.scene;
           model.position.set(0, 0, 0);
           model.scale.set(5, 5, 5);
           scene.add(model);
-          function rotateModel() {
+          const rotateModel = () => {
             requestAnimationFrame(rotateModel);
             model.rotation.y += 0.005;
-          }
+          };
           rotateModel();
-        },
-        undefined,
-        (error) => {
-          console.error('Error loading glTF model:', error);
         }
       );
-
-      const raycaster = new THREE.Raycaster();
-      const mouse = new THREE.Vector2();
-      let currentlyHovered = null;
-
-      function getCurrentlyHovered() {
-        return currentlyHovered;
-      }
-
-      function setCurrentlyHovered(value) {
-        currentlyHovered = value;
-      }
-
-      function onMouseMove(event) {
-        handleMouseMove(event, raycaster, mouse, camera, shapes, originalScales, setCurrentlyHovered, getCurrentlyHovered);
-      }
-
-      function onMouseClick(event) {
-        mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-        mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-        raycaster.setFromCamera(mouse, camera);
-        const intersects = raycaster.intersectObjects(shapes);
-        if (intersects.length > 0) {
-          const intersectedMesh = intersects[0].object;
-          if (intersectedMesh.material !== texturedMaterial) {
-            intersectedMesh.material = new THREE.MeshStandardMaterial({
-              color: Math.random() * 0xffffff,
-              metalness: 0.5,
-              roughness: 0.3
-            });
-          }
-        }
-      }
-
-      window.addEventListener('mousemove', onMouseMove);
-      window.addEventListener('click', onMouseClick);
-
-      function updateSphereAndAnimations(delta) {
-        movingSphere.position.addScaledVector(sphereVelocity, delta * 60);
-        if (Math.abs(movingSphere.position.x) > boundary) {
-          movingSphere.position.x = Math.sign(movingSphere.position.x) * boundary;
-          sphereVelocity.x *= -1;
-        }
-        if (Math.abs(movingSphere.position.y) > boundary) {
-          movingSphere.position.y = Math.sign(movingSphere.position.y) * boundary;
-          sphereVelocity.y *= -1;
-        }
-        if (Math.abs(movingSphere.position.z) > boundary) {
-          movingSphere.position.z = Math.sign(movingSphere.position.z) * boundary;
-          sphereVelocity.z *= -1;
-        }
-
-        shapes.forEach((shape, index) => {
-          if (animations[index].isPulsing) {
-            animations[index].pulseTime += delta;
-            const t = animations[index].pulseTime / animations[index].pulseDuration;
-            if (t < 1) {
-              const scaleFactor = 1 + 0.3 * Math.sin(t * Math.PI);
-              shape.scale.copy(originalScales[index]).multiplyScalar(scaleFactor);
-            } else {
-              animations[index].isPulsing = false;
-              shape.scale.copy(originalScales[index]);
-            }
-          }
-        });
-      }
 
       let lastTime = performance.now() / 1000;
       function animate() {
@@ -218,12 +151,19 @@
         const delta = currentTime - lastTime;
         lastTime = currentTime;
 
-        shapes.forEach((shape, index) => {
-          shape.rotation.x += rotationDirections[index].x;
-          shape.rotation.y += rotationDirections[index].y;
+        shapes.forEach((shape, i) => {
+          shape.rotation.x += rotationDirections[i].x;
+          shape.rotation.y += rotationDirections[i].y;
         });
 
-        updateSphereAndAnimations(delta);
+        updateSphereAndAnimations({
+          movingSphere,
+          sphereVelocity,
+          boundary,
+          shapes,
+          animations,
+          originalScales
+        }, delta);
 
         checkCollisions({
           movingSphere,
@@ -237,7 +177,6 @@
         controls.update();
         renderer.render(scene, camera);
       }
-
       animate();
 
       window.addEventListener('resize', () => {
